--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
     <section class="acerca-de">
       <div class="contenedor">
         <div class="foto">
-          <img src="img/portafolio/fondoblanco.png" width="115" height="115" alt="Andres Moyano">
+          <img src="img/portafolio/fondoBlanco.png" width="115" height="115" alt="Andres Moyano">
         </div>
 
         <div class="texto">
           <h3 class="titulo">Acerca de</h3>
-          <p class="yop">Soy Andres Moyano <span class="bold">un jugadorazo</span> de la SD TEUCRO. Me gustan las chicas, me gustan las drogas me gusta mi guitarra me gusta madonna</p>
+          <p class="yop">Soy Andres Moyano, jugador profesional de balonmano, con intención de dedicarme
+            al desarrollo web.</p>
         </div>
 
       </div>
@@ -58,8 +59,8 @@
               <img src="img/portafolio/trabajos/1.jpg" alt="Hojas verdes y lindas">
             </div>
             <div class="descripcion">
-              <p class="nombre">Lorem Ipsum</p>
-              <p class="categoria"> Html - PHP - CSS</p>
+              <p class="nombre">Deptos Malbec</p>
+              <p class="categoria"> Javascript - HTML5 - CSS</p>
             </div>
           </div>
 
@@ -68,8 +69,8 @@
               <img src="img/portafolio/trabajos/2.jpg" alt="Hojas verdes y lindas">
             </div>
             <div class="descripcion">
-              <p class="nombre">Lorem Ipsum</p>
-              <p class="categoria"> Html - PHP - CSS</p>
+              <p class="nombre">zCalc</p>
+              <p class="categoria"> App Android</p>
             </div>
           </div>
 
