--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section class="acerca-de">
       <div class="contenedor">
         <div class="foto">
-          <img src="img/portafolio/fondoBlanco.png" width="115" height="115" alt="Andres Moyano">
+          <img src="img/portafolio/andres.jpg" width="115" height="115" alt="Andres Moyano">
         </div>
 
         <div class="texto">
@@ -66,7 +66,7 @@
 
           <div class="trabajo">
             <div class="thumb">
-              <img src="img/portafolio/trabajos/2.jpg" alt="Hojas verdes y lindas">
+              <a href="https://github.com/zurdelli/zCalc"> <img src="img/portafolio/trabajos/2.jpg" alt="Hojas verdes y lindas"></a>
             </div>
             <div class="descripcion">
               <p class="nombre">zCalc</p>
