--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,600i,700">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/estiloz.css">
   <title>Inicio</title>
 </head>
@@ -15,19 +15,19 @@
 <body>
   <header>
     <div class="contenedor">
-      <nav class="menu">
+      <!-- <nav class="menu">
         <a href="file:///D:/Documentos/Curso%20Diseno%20web/css/css2/index.html">Inicio</a>
         <a href="file:///D:/Documentos/Curso%20Diseno%20web/css/css2/galeria.html">Galeria</a>
         <a href="#">Portafolio</a>
         <a href="file:///D:/Documentos/Curso%20Diseno%20web/css/css2/flexbox.html">Flexbox</a>
         <a href="file:///D:/Documentos/Curso%20Diseno%20web/css/css2/restaurante.html">Restaurante</a>
         <a href="file:///D:/Documentos/Curso%20Diseno%20web/css/css2/form.html">Contacto</a>
-      </nav>
+      </nav> -->
 
       <div class="contenedor-texto">
         <div class="texto">
           <h1 class="nombre">Andres Moyano</h1>
-          <h2 class="profesion">Jugador Profesional</h2>
+          <h2 class="profesion">Professional Handball Player</h2>
         </div>
       </div>
     </div>
@@ -41,9 +41,8 @@
         </div>
 
         <div class="texto">
-          <h3 class="titulo">Acerca de</h3>
-          <p class="yop">Soy Andres Moyano, jugador profesional de balonmano, con intención de dedicarme
-            al desarrollo web.</p>
+          <h3 class="titulo">About me</h3>
+          <p class="yop">I'm Andres Moyano, a professional handball player, with the intention of work in web development in mind.</p>
         </div>
 
       </div>
@@ -51,16 +50,16 @@
     </section>
     <section class="trabajos">
       <div class="contenedor">
-        <h3 class="titulo">Trabajos</h3>
+        <h3 class="titulo">Works</h3>
         <div class="contenedor-trabajos">
 
           <div class="trabajo">
             <div class="thumb">
-              <img src="img/portafolio/trabajos/1.jpg" alt="Hojas verdes y lindas">
+              <a href="https://zurdelli.github.io/deptos-malbec/">  <img src="img/portafolio/trabajos/1.jpg" alt="Hojas verdes y lindas"> </a>
             </div>
             <div class="descripcion">
               <p class="nombre">Deptos Malbec</p>
-              <p class="categoria"> Javascript - HTML5 - CSS</p>
+              <p class="categoria">Js - HTML5 - CSS3 - Jquery</p>
             </div>
           </div>
 
@@ -70,17 +69,17 @@
             </div>
             <div class="descripcion">
               <p class="nombre">zCalc</p>
-              <p class="categoria"> App Android</p>
+              <p class="categoria"> AndroidX</p>
             </div>
           </div>
 
           <div class="trabajo">
             <div class="thumb">
-              <img src="img/portafolio/trabajos/3.jpg" alt="Hojas verdes y lindas">
+              <a href="https://zurdelli.github.io/CafeZespresso/"><img src="img/portafolio/trabajos/3.jpg" alt="Hojas verdes y lindas"></a>
             </div>
             <div class="descripcion">
-              <p class="nombre">Lorem Ipsum</p>
-              <p class="categoria"> Html - PHP - CSS</p>
+              <p class="nombre">Cafe Zespresso</p>
+              <p class="categoria">Js - HTML5 - CSS3 - Jquery</p>
             </div>
           </div>
 
@@ -89,8 +88,8 @@
               <img src="img/portafolio/trabajos/4.jpg" alt="Hojas verdes y lindas">
             </div>
             <div class="descripcion">
-              <p class="nombre">Lorem Ipsum</p>
-              <p class="categoria"> Html - PHP - CSS</p>
+              <p class="nombre">Arduino projects</p>
+              <p class="categoria"> C++ - Arduino</p>
             </div>
           </div>
 
@@ -99,8 +98,8 @@
               <img src="img/portafolio/trabajos/5.jpg" alt="Hojas verdes y lindas">
             </div>
             <div class="descripcion">
-              <p class="nombre">Lorem Ipsum</p>
-              <p class="categoria"> Html - PHP - CSS</p>
+              <p class="nombre">Python projects</p>
+              <p class="categoria">Python</p>
             </div>
           </div>
 
@@ -142,11 +141,11 @@
   <footer>
     <section class="contacto">
       <div class="contenedor">
-        <h3 class="titulo">Contacto</h3>
+        <h3 class="titulo">Contact me</h3>
         <form action="" class=formulario>
-          <input type="text" placeholder="Nombre" name="nombre" required>
-          <input type="email" placeholder="Correo" name="correo" required>
-          <textarea name="mensaje" placeholder="Mensaje"></textarea>
+          <input type="text" placeholder="Name" name="nombre" required>
+          <input type="email" placeholder="Email" name="correo" required>
+          <textarea name="mensaje" placeholder="Message"></textarea>
           <input type="submit" class="boton" value="Enviar">
         </form>
       </div>
@@ -155,7 +154,7 @@
     <section class="redes">
       <div class="contenedor">
         <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-        <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+        <a href="https://www.linkedin.com/in/andres-moyano-aa7452234/" class="linkedin"><i class="fa fa-linkedin"></i></a>
         <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
         <a href="#" class="youtube"><i class="fa fa-youtube-play"></i></a>
       </div>
