--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 
         <div class="texto">
           <h3 class="titulo">About me</h3>
-          <p class="yop">I'm Andres Moyano, a professional handball player, with the intention of work in web development in mind.</p>
+          <p class="yop">I'm Andres Moyano, a professional handball player, with the intention of work in web
+            development in mind.</p>
         </div>
 
       </div>
@@ -50,12 +51,13 @@
     </section>
     <section class="trabajos">
       <div class="contenedor">
-        <h3 class="titulo">Works</h3>
+        <h3 class="titulo">Webpages</h3>
         <div class="contenedor-trabajos">
 
           <div class="trabajo">
             <div class="thumb">
-              <a href="https://zurdelli.github.io/deptos-malbec/">  <img src="img/portafolio/trabajos/1.jpg" alt="Hojas verdes y lindas"> </a>
+              <a href="https://zurdelli.github.io/deptos-malbec/"> <img src="img/portafolio/trabajos/deptosMalbec.jpg"
+                  alt="Departamentos Malbec"> </a>
             </div>
             <div class="descripcion">
               <p class="nombre">Deptos Malbec</p>
@@ -65,17 +67,8 @@
 
           <div class="trabajo">
             <div class="thumb">
-              <a href="https://github.com/zurdelli/zCalc"> <img src="img/portafolio/trabajos/2.jpg" alt="Hojas verdes y lindas"></a>
-            </div>
-            <div class="descripcion">
-              <p class="nombre">zCalc</p>
-              <p class="categoria"> AndroidX</p>
-            </div>
-          </div>
-
-          <div class="trabajo">
-            <div class="thumb">
-              <a href="https://zurdelli.github.io/CafeZespresso/"><img src="img/portafolio/trabajos/3.jpg" alt="Hojas verdes y lindas"></a>
+              <a href="https://zurdelli.github.io/CafeZespresso/"><img src="img/portafolio/trabajos/cafeZespresso.jpg"
+                  alt="Cafe Zespresso"></a>
             </div>
             <div class="descripcion">
               <p class="nombre">Cafe Zespresso</p>
@@ -90,6 +83,83 @@
             <div class="descripcion">
               <p class="nombre">Arduino projects</p>
               <p class="categoria"> C++ - Arduino</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="trabajos">
+      <div class="contenedor">
+        <h3 class="titulo">Android Apps</h3>
+        <div class="contenedor-trabajos">
+
+          <div class="trabajo">
+            <div class="thumb">
+              <a href="https://github.com/zurdelli/zCalc"> <img src="img/portafolio/trabajos/zCalc.jpg"
+                  alt="zCalc"></a>
+            </div>
+            <div class="descripcion">
+              <p class="nombre">zCalc</p>
+              <p class="categoria"> App AndroidX</p>
+            </div>
+          </div>
+
+          <div class="trabajo">
+            <div class="thumb">
+              <img src="img/portafolio/trabajos/4.jpg" alt="Hojas verdes y lindas">
+            </div>
+            <div class="descripcion">
+              <p class="nombre">Arduino projects</p>
+              <p class="categoria"> C++ - Arduino</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <hr>
+
+
+    <section class="trabajos">
+      <div class="contenedor">
+        <h3 class="titulo">Repositories</h3>
+        <div class="contenedor-trabajos">
+
+          <div class="trabajo">
+            <div class="thumb">
+              <a href="https://zurdelli.github.io/deptos-malbec/"> <img src="img/portafolio/trabajos/1.jpg"
+                  alt="Hojas verdes y lindas"> </a>
+            </div>
+            <div class="descripcion">
+              <p class="nombre">Python</p>
+            </div>
+          </div>
+
+          <div class="trabajo">
+            <div class="thumb">
+              <a href="https://github.com/zurdelli/zCalc"> <img src="img/portafolio/trabajos/2.jpg"
+                  alt="Hojas verdes y lindas"></a>
+            </div>
+            <div class="descripcion">
+              <p class="nombre">Java</p>
+            </div>
+          </div>
+
+          <div class="trabajo">
+            <div class="thumb">
+              <a href="https://zurdelli.github.io/CafeZespresso/"><img src="img/portafolio/trabajos/3.jpg"
+                  alt="Hojas verdes y lindas"></a>
+            </div>
+            <div class="descripcion">
+              <p class="nombre">Arduino</p>
+            </div>
+          </div>
+
+          <div class="trabajo">
+            <div class="thumb">
+              <img src="img/portafolio/trabajos/4.jpg" alt="Hojas verdes y lindas">
+            </div>
+            <div class="descripcion">
+              <p class="nombre">EmulationStation</p>
             </div>
           </div>
 
@@ -154,7 +224,8 @@
     <section class="redes">
       <div class="contenedor">
         <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-        <a href="https://www.linkedin.com/in/andres-moyano-aa7452234/" class="linkedin"><i class="fa fa-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/andres-moyano-aa7452234/" class="linkedin"><i
+            class="fa fa-linkedin"></i></a>
         <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
         <a href="#" class="youtube"><i class="fa fa-youtube-play"></i></a>
       </div>
