--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </section>
     <section class="trabajos">
       <div class="contenedor">
-        <h3 class="titulo">Webpages</h3>
+        <h3 class="titulo">My Projects</h3>
         <div class="contenedor-trabajos">
 
           <div class="trabajo">
@@ -78,25 +78,16 @@
 
           <div class="trabajo">
             <div class="thumb">
-              <img src="img/portafolio/trabajos/4.jpg" alt="Hojas verdes y lindas">
+              <a href="https://github.com/zurdelli/HuertaManu"><img src="img/portafolio/trabajos/HuertaManu.jpg" alt="Huerta Manu"></a>
             </div>
             <div class="descripcion">
-              <p class="nombre">Arduino projects</p>
-              <p class="categoria"> C++ - Arduino</p>
+              <p class="nombre">Huerta del Manu</p>
+              <p class="categoria"> ESP8266 Project </p>
             </div>
           </div>
-        </div>
-      </div>
-    </section>
-    <section class="trabajos">
-      <div class="contenedor">
-        <h3 class="titulo">Android Apps</h3>
-        <div class="contenedor-trabajos">
-
           <div class="trabajo">
             <div class="thumb">
-              <a href="https://github.com/zurdelli/zCalc"> <img src="img/portafolio/trabajos/zCalc.jpg"
-                  alt="zCalc"></a>
+              <a href="https://github.com/zurdelli/zCalc"> <img src="img/portafolio/trabajos/zCalc.jpg" alt="zCalc"></a>
             </div>
             <div class="descripcion">
               <p class="nombre">zCalc</p>
@@ -106,103 +97,40 @@
 
           <div class="trabajo">
             <div class="thumb">
-              <img src="img/portafolio/trabajos/4.jpg" alt="Hojas verdes y lindas">
+              <a href="https://github.com/zurdelli/tappitas"> <img src="img/portafolio/trabajos/tappitas.jpg" alt="Tappitas"></a>
             </div>
             <div class="descripcion">
-              <p class="nombre">Arduino projects</p>
-              <p class="categoria"> C++ - Arduino</p>
+              <p class="nombre">Tappitas</p>
+              <p class="categoria"> App AndroiX - Flutter</p>
             </div>
           </div>
-        </div>
-      </div>
-    </section>
-    <hr>
-
-
-    <section class="trabajos">
-      <div class="contenedor">
-        <h3 class="titulo">Repositories</h3>
-        <div class="contenedor-trabajos">
-
           <div class="trabajo">
             <div class="thumb">
-              <a href="https://zurdelli.github.io/deptos-malbec/"> <img src="img/portafolio/trabajos/1.jpg"
-                  alt="Hojas verdes y lindas"> </a>
+              <a href="https://github.com/zurdelli/configRasp"> <img src="img/portafolio/trabajos/configrasp.jpg" alt="Config Rasp"></a>
             </div>
             <div class="descripcion">
-              <p class="nombre">Python</p>
+              <p class="nombre">My Raspberry Pi Config</p>
+              <p class="categoria"> Docker containers</p>
             </div>
           </div>
-
-          <div class="trabajo">
-            <div class="thumb">
-              <a href="https://github.com/zurdelli/zCalc"> <img src="img/portafolio/trabajos/2.jpg"
-                  alt="Hojas verdes y lindas"></a>
-            </div>
-            <div class="descripcion">
-              <p class="nombre">Java</p>
-            </div>
-          </div>
-
-          <div class="trabajo">
-            <div class="thumb">
-              <a href="https://zurdelli.github.io/CafeZespresso/"><img src="img/portafolio/trabajos/3.jpg"
-                  alt="Hojas verdes y lindas"></a>
-            </div>
-            <div class="descripcion">
-              <p class="nombre">Arduino</p>
-            </div>
-          </div>
-
           <div class="trabajo">
             <div class="thumb">
               <img src="img/portafolio/trabajos/4.jpg" alt="Hojas verdes y lindas">
             </div>
             <div class="descripcion">
-              <p class="nombre">EmulationStation</p>
+              <p class="nombre">Another Project</p>
+              <p class="categoria"> Coming soon...</p>
             </div>
           </div>
-
           <div class="trabajo">
             <div class="thumb">
-              <img src="img/portafolio/trabajos/5.jpg" alt="Hojas verdes y lindas">
+              <img src="img/portafolio/trabajos/3.jpg" alt="Hojas verdes y lindas">
             </div>
             <div class="descripcion">
-              <p class="nombre">Python projects</p>
-              <p class="categoria">Python</p>
+              <p class="nombre">Another Project</p>
+              <p class="categoria"> Coming soon...</p>
             </div>
           </div>
-
-          <div class="trabajo">
-            <div class="thumb">
-              <img src="img/portafolio/trabajos/6.jpg" alt="Hojas verdes y lindas">
-            </div>
-            <div class="descripcion">
-              <p class="nombre">Lorem Ipsum</p>
-              <p class="categoria"> Html - PHP - CSS</p>
-            </div>
-          </div>
-
-          <div class="trabajo">
-            <div class="thumb">
-              <img src="img/portafolio/trabajos/7.jpg" alt="Hojas verdes y lindas">
-            </div>
-            <div class="descripcion">
-              <p class="nombre">Lorem Ipsum</p>
-              <p class="categoria"> Html - PHP - CSS</p>
-            </div>
-          </div>
-
-          <div class="trabajo">
-            <div class="thumb">
-              <img src="img/portafolio/trabajos/8.jpg" alt="Hojas verdes y lindas">
-            </div>
-            <div class="descripcion">
-              <p class="nombre">Zurdelli King</p>
-              <p class="categoria"> Tu hermana</p>
-            </div>
-          </div>
-
         </div>
       </div>
     </section>
@@ -223,11 +151,11 @@
 
     <section class="redes">
       <div class="contenedor">
-        <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
+        <a href="https://github.com/zurdelli" class="twitter"><i class="fa fa-github"></i></a>
         <a href="https://www.linkedin.com/in/andres-moyano-aa7452234/" class="linkedin"><i
             class="fa fa-linkedin"></i></a>
-        <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-        <a href="#" class="youtube"><i class="fa fa-youtube-play"></i></a>
+        <a href="https://www.instagram.com/zurdelli" class="instagram"><i class="fa fa-instagram"></i></a>
+        <a href="#" class="youtube"><i class="fa fa-youtube"></i></a>
       </div>
     </section>
   </footer>
