--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
     <section class="acerca-de">
       <div class="contenedor">
         <div class="foto">
-          <img src="img/portafolio/andres.jpg" width="115" height="115" alt="Andres Moyano">
+          <img src="img/portafolio/andres.jpg" width="230" height="230" alt="Andres Moyano">
         </div>
 
         <div class="texto">
           <h3 class="titulo">About me</h3>
-          <p class="yop">I'm Andres Moyano, a professional handball player, with the intention of work in web
+          <p class="yop">I'm Andres Moyano, a professional handball player, with the intention of work in web or mobile
             development in mind.</p>
         </div>
 
@@ -60,7 +60,7 @@
                   alt="Departamentos Malbec"> </a>
             </div>
             <div class="descripcion">
-              <p class="nombre">Deptos Malbec</p>
+              <a href="https://zurdelli.github.io/deptos-malbec/"><p class="nombre">Deptos Malbec</p> </a>
               <p class="categoria">Js - HTML5 - CSS3 - Jquery</p>
             </div>
           </div>
@@ -71,7 +71,7 @@
                   alt="Cafe Zespresso"></a>
             </div>
             <div class="descripcion">
-              <p class="nombre">Cafe Zespresso</p>
+              <a href="https://zurdelli.github.io/CafeZespresso/"><p class="nombre">Cafe Zespresso</p></a>
               <p class="categoria">Js - HTML5 - CSS3 - Jquery</p>
             </div>
           </div>
@@ -81,7 +81,7 @@
               <a href="https://github.com/zurdelli/HuertaManu"><img src="img/portafolio/trabajos/HuertaManu.jpg" alt="Huerta Manu"></a>
             </div>
             <div class="descripcion">
-              <p class="nombre">Huerta del Manu</p>
+              <a href="https://github.com/zurdelli/HuertaManu"><p class="nombre">Huerta del Manu</p></a>
               <p class="categoria"> ESP8266 Project </p>
             </div>
           </div>
@@ -90,7 +90,7 @@
               <a href="https://github.com/zurdelli/zCalc"> <img src="img/portafolio/trabajos/zCalc.jpg" alt="zCalc"></a>
             </div>
             <div class="descripcion">
-              <p class="nombre">zCalc</p>
+              <a href="https://github.com/zurdelli/zCalc"><p class="nombre">zCalc</p></a>
               <p class="categoria"> App AndroidX</p>
             </div>
           </div>
@@ -100,7 +100,7 @@
               <a href="https://github.com/zurdelli/tappitas"> <img src="img/portafolio/trabajos/tappitas.jpg" alt="Tappitas"></a>
             </div>
             <div class="descripcion">
-              <p class="nombre">Tappitas</p>
+              <a href="https://github.com/zurdelli/tappitas"><p class="nombre">Tappitas</p></a>
               <p class="categoria"> App AndroiX - Flutter</p>
             </div>
           </div>
@@ -109,7 +109,7 @@
               <a href="https://github.com/zurdelli/configRasp"> <img src="img/portafolio/trabajos/configrasp.jpg" alt="Config Rasp"></a>
             </div>
             <div class="descripcion">
-              <p class="nombre">My Raspberry Pi Config</p>
+              <a href="https://github.com/zurdelli/configRasp"><p class="nombre">My Raspberry Pi Config</p></a>
               <p class="categoria"> Docker containers</p>
             </div>
           </div>
