fixed_minor_changes

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 
         <div class="texto">
           <h3 class="titulo">About me</h3>
-          <p class="yop">I'm Andres Moyano, a professional handball player, with the intention of being a mobile or web developer in a future.</p>
+          <p class="yop">I'm Andres Moyano, an argentinian/spanish professional handball player living in Spain,
+             with the intention of being a mobile or web developer in a future.</p>
         </div>
 
       </div>
@@ -109,7 +110,7 @@
             <div class="descripcion">
               <p><i class="fab fa-android icons android"></i></p>
               <a href="https://github.com/zurdelli/tappitas" class="nombreProyecto"> Tappitas</a>
-              <p class="categoria">An AndroidX App based on Flutter</p>
+              <p class="categoria">An AndroidX App made with Flutter</p>
             </div>
           </div>
           <div class="trabajo">
@@ -164,7 +165,7 @@
         <a href="https://www.linkedin.com/in/andres-moyano-aa7452234/" class="linkedin"><i
             class="fa fa-linkedin"></i></a>
         <a href="https://www.instagram.com/zurdelli" class="instagram"><i class="fa fa-instagram"></i></a>
-        <a href="#" class="youtube"><i class="fa fa-youtube"></i></a>
+        <!-- <a href="#" class="youtube"><i class="fa fa-youtube"></i></a> -->
       </div>
     </section>
   </footer>
